02-jupyterhub/jupyterhub-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jupyterhub-azuread
spec:
  entryPoints: # We listen to requests coming from ports 80 and 443
    - websecure
  routes:
    - match: (Host(`jupyterhub.cs.mtsu.edu`) && PathPrefix(`/azuread`))
      kind: Rule
      services:
        - name: proxy-public # Requests will be forwarded to this service
          port: 80
          passHostHeader: true
